--- a/contrib/docker/farmbot/webapi/Dockerfile
+++ b/contrib/docker/farmbot/webapi/Dockerfile
@@ -11,8 +11,10 @@ RUN git clone --depth=1 https://github.com/FarmBot/Farmbot-Web-API
 RUN cd Farmbot-Web-API && bundle install
 RUN curl -sL https://deb.nodesource.com/setup_7.x | bash
 RUN apt-get install -y nodejs build-essential
-ADD database.yml Farmbot-Web-API/config/database.yml
 WORKDIR /opt/Farmbot-Web-API
 # ./install_fronted error · Issue #199 · FarmBot/farmbot-web-frontend
 # https://github.com/FarmBot/farmbot-web-frontend/issues/199
-# RUN ./install_fronted
+RUN ./install_frontend.sh
+ADD database.yml config/
+ADD start.sh /start.sh
+RUN chmod +x /start.sh
