--- a/software/web-app/application.yml
+++ b/software/web-app/application.yml
@@ -23,6 +23,10 @@
 
 # If your server is on a domain (eg: my-own-farmbot.com), put it here.
 # DONT USE `localhost`. USE A REAL IP OR DOMAIN!
+# DONT USE `localhost`.
+# DONT USE `127.0.0.1`.
+# DONT USE `0.0.0.0`.
+# Use a real ip or domain name.
 API_HOST: "changeme-io"
 
 # 3000 for local development. 443 is using SSL. You will need `sudo` to use PORT
@@ -82,11 +86,9 @@ MQTT_HOST: "changeme-io"
 # SENDGRID_USERNAME: "Used by FarmBot, Inc"
 
 # For email delivery. Who is your email host?
-# SMTP_HOST: "smtp.sendgrid.net"
-
+SMTP_HOST: "smtp.sendgrid.net"
 # Optional with default of 587
-# SMTP_PORT: "587"
-
+SMTP_PORT: "587"
 # Set this if you don't want to deal with email verification of new users.
 # (self hosted users)
 NO_EMAILS: "TRUE"
@@ -110,3 +112,10 @@ MQTT_VHOST: "/"
 # can securly host the same server on multiple domain names
 #     ex: my.farm.bot, my.farmbot.io
 EXTRA_DOMAINS: "changeme-io"
+# If you are a software developer and you wish to run integration tests, set the
+# ENV below to "true".
+# Most users will not want this enabled.
+RUN_CAPYBARA: "true"
+# Set this to "production" in most cases.
+# If you need help debugging issues, please delete this line.
+RAILS_ENV: "development"
